--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
+    "dev": "vite",
     "release": "release-it"
   },
   "author": "",
@@ -22,7 +23,9 @@
     "release-it": "^17.6.0",
     "rollup": "^4.24.0",
     "rollup-plugin-svelte": "^7.2.2",
-    "svelte": "^4.2.19"
+    "svelte": "^4.2.19",
+    "vite": "^4.5.0",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5"
   },
   "dependencies": {
     "marked": "^14.1.2"
