--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@rollup/plugin-commonjs": "^25.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@sveltejs/vite-plugin-svelte": "^2.4.5",
     "release-it": "^17.6.0",
     "rollup": "^4.24.0",
     "rollup-plugin-svelte": "^7.2.2",
     "svelte": "^4.2.19",
-    "vite": "^4.5.0",
-    "@sveltejs/vite-plugin-svelte": "^2.4.5"
+    "vite": "^4.5.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "marked": "^14.1.2"
   },
   "files": [
