--- a/.release-it.json
+++ b/.release-it.json
@@ -3,28 +3,31 @@
     "commitMessage": "chore: release v${version}",
     "tagName": "v${version}"
   },
+  "npm": {
+    "publish": false
+  },
   "plugins": {
-  "@release-it/conventional-changelog": {
-    "infile": "CHANGELOG.md",
-    "header": "# Changelog",
-    "ignoreRecommendedBump": true,
-    "preset": {
-      "name": "conventionalcommits",
-      "types": [
-        {"type": "feat", "section": "Features"},
-        {"type": "fix", "section": "Bug Fixes"},
-        {"type": "perf", "section": "Performance Improvements"},
-        {"type": "revert", "section": "Reverts"},
-        {"type": "docs", "section": "Documentation"},
-        {"type": "style", "section": "Styles"},
-        {"type": "refactor", "section": "Code Refactoring"},
-        {"type": "test", "section": "Tests"},
-        {"type": "build", "section": "Builds"},
-        {"type": "ci", "section": "Continuous Integrations"},
-        {"type": "chore", "section": "Chores"},
-        {"type": "others", "section": null}
-      ]
+    "@release-it/conventional-changelog": {
+      "infile": "CHANGELOG.md",
+      "header": "# Changelog",
+      "ignoreRecommendedBump": true,
+      "preset": {
+        "name": "conventionalcommits",
+        "types": [
+          { "type": "feat", "section": "Features" },
+          { "type": "fix", "section": "Bug Fixes" },
+          { "type": "perf", "section": "Performance Improvements" },
+          { "type": "revert", "section": "Reverts" },
+          { "type": "docs", "section": "Documentation" },
+          { "type": "style", "section": "Styles" },
+          { "type": "refactor", "section": "Code Refactoring" },
+          { "type": "test", "section": "Tests" },
+          { "type": "build", "section": "Builds" },
+          { "type": "ci", "section": "Continuous Integrations" },
+          { "type": "chore", "section": "Chores" },
+          { "type": "others", "section": null }
+        ]
+      }
     }
   }
-}
 }
