--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@autocust/ai-chat-widget",
-  "version": "2.3.10",
+  "version": "3.0.0-0",
   "repository": {
     "type": "git",
     "url": "git://github.com/Autocust/ai-chat-widget.git"
